--- a/.github/workflows/deploy-database.yml
+++ b/.github/workflows/deploy-database.yml
@@ -5,12 +5,41 @@ on:
     branches: [ main, master ]
     paths:
       - 'database.sql'
+      - 'src/**'
       - '.github/workflows/deploy-database.yml'
   workflow_dispatch:
     inputs:
-      database_file:
-        description: '数据库文件路径'
+      deploy_type:
+        description: '部署类型'
         required: true
+        default: 'incremental'
+        type: choice
+        options:
+          - incremental
+          - full
+      source_env:
+        description: '源环境'
+        required: true
+        default: 'development'
+        type: choice
+        options:
+          - development
+          - test
+          - staging
+          - production
+      target_env:
+        description: '目标环境'
+        required: true
+        default: 'production'
+        type: choice
+        options:
+          - development
+          - test
+          - staging
+          - production
+      database_file:
+        description: '数据库文件路径（仅用于完整部署）'
+        required: false
         default: 'database.sql'
 
 jobs:
@@ -21,15 +50,36 @@ jobs:
     - name: 📥 检出代码
       uses: actions/checkout@v4
 
-    - name: 🔍 检查数据库文件
+    - name: 🟢 设置 Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: '18'
+        cache: 'npm'
+
+    - name: 📦 安装依赖
       run: |
-        DB_FILE="${{ github.event.inputs.database_file || 'database.sql' }}"
-        if [ ! -f "$DB_FILE" ]; then
-          echo "❌ 数据库文件不存在: $DB_FILE"
-          exit 1
+        cd movies-mysql
+        npm install
+
+    - name: 🔍 检查部署类型
+      run: |
+        DEPLOY_TYPE="${{ github.event.inputs.deploy_type || 'incremental' }}"
+        SOURCE_ENV="${{ github.event.inputs.source_env || 'development' }}"
+        TARGET_ENV="${{ github.event.inputs.target_env || 'production' }}"
+        
+        echo "🚀 部署类型: $DEPLOY_TYPE"
+        echo "📤 源环境: $SOURCE_ENV"
+        echo "📥 目标环境: $TARGET_ENV"
+        
+        if [ "$DEPLOY_TYPE" = "full" ]; then
+          DB_FILE="${{ github.event.inputs.database_file || 'database.sql' }}"
+          if [ ! -f "$DB_FILE" ]; then
+            echo "❌ 数据库文件不存在: $DB_FILE"
+            exit 1
+          fi
+          echo "✅ 找到数据库文件: $DB_FILE"
+          ls -la "$DB_FILE"
         fi
-        echo "✅ 找到数据库文件: $DB_FILE"
-        ls -la "$DB_FILE"
 
     - name: 🚀 部署到阿里云服务器
       uses: appleboy/ssh-action@v1.0.3
@@ -41,14 +91,18 @@ jobs:
         command_timeout: "600s"
         script: |
           echo "🚀 开始部署数据库到阿里云服务器..."
-          echo "📦 数据库文件: ${{ github.event.inputs.database_file || 'database.sql' }}"
-          echo "🔍 调试信息开始 ========================"
-          echo "数据库名称: '${{ secrets.DB_NAME }}'"
-          echo "数据库用户: '${{ secrets.DB_USER }}'"
-          echo "数据库密码长度: ${#DB_PASSWORD} 字符"
-          echo "=========================================="
+          echo "📦 部署类型: ${{ github.event.inputs.deploy_type || 'incremental' }}"
+          echo "📤 源环境: ${{ github.event.inputs.source_env || 'development' }}"
+          echo "📥 目标环境: ${{ github.event.inputs.target_env || 'production' }}"
           
-          DB_NAME="${{ secrets.DB_NAME }}"
+          # 检查 Node.js 是否安装
+          if ! command -v node &> /dev/null; then
+            echo "📦 安装 Node.js..."
+            curl -fsSL https://deb.nodesource.com/setup_18.x | sudo -E bash -
+            sudo apt-get install -y nodejs
+          else
+            echo "✅ Node.js 已安装: $(node --version)"
+          fi
           
           # 检查 MySQL 是否安装
           if ! command -v mysql &> /dev/null; then
@@ -74,67 +128,25 @@ jobs:
           
           # 创建数据库（如果不存在）
           echo "📊 创建数据库..."
-          sudo mysql -e "CREATE DATABASE IF NOT EXISTS \`$DB_NAME\`;" || true
+          sudo mysql -e "CREATE DATABASE IF NOT EXISTS \`${{ secrets.DB_NAME }}\`;" || true
           
           # 显示所有数据库
           echo "🔍 当前所有数据库:"
           sudo mysql -e "SHOW DATABASES;"
           
-          # 创建配置文件来避免密码在命令行中显示
-          MYSQL_CNF="/tmp/mysql.cnf"
-          cat > "$MYSQL_CNF" << EOF
-          [client]
-          user=${{ secrets.DB_USER }}
-          password=${{ secrets.DB_PASSWORD }}
-          host=localhost
-          port=3306
-          EOF
-          
-          echo "🔍 配置文件内容（隐藏密码）:"
-          cat "$MYSQL_CNF" | sed 's/password=.*/password=***HIDDEN***/'
-          
-          # 设置配置文件权限
-          chmod 600 "$MYSQL_CNF"
-          
-          # 测试数据库连接
-          echo "🔍 测试数据库连接..."
-          if sudo mysql --defaults-extra-file="$MYSQL_CNF" -e "SELECT 1;" > /dev/null 2>&1; then
-            echo "✅ 数据库连接成功"
-          else
-            echo "❌ 数据库连接失败"
-            echo "🔍 尝试显示错误信息:"
-            sudo mysql --defaults-extra-file="$MYSQL_CNF" -e "SELECT 1;" 2>&1
-            rm -f "$MYSQL_CNF"
-            exit 1
-          fi
-          
-          # 备份现有数据库（如果存在）
-          echo "📦 备份现有数据库..."
-          BACKUP_FILE="/tmp/backup_$DB_NAME_$(date +%Y%m%d_%H%M%S).sql"
-          sudo mysqldump --defaults-extra-file="$MYSQL_CNF" \`$DB_NAME\` > "$BACKUP_FILE" 2>/dev/null || echo "⚠️ 备份失败或数据库为空"
-          
-          # 删除现有数据库内容
-          echo "🗑️ 清空现有数据库..."
-          sudo mysql --defaults-extra-file="$MYSQL_CNF" -e "DROP DATABASE IF EXISTS \`$DB_NAME\`;"
-          sudo mysql --defaults-extra-file="$MYSQL_CNF" -e "CREATE DATABASE \`$DB_NAME\`;"
-          
-          # 清理配置文件
-          rm -f "$MYSQL_CNF"
-          
           echo "✅ 数据库准备完成"
-          echo "🔍 调试信息结束 ========================"
 
-    - name: 📤 上传数据库文件
+    - name: 📤 上传项目文件
       uses: appleboy/scp-action@v0.1.7
       with:
         host: ${{ secrets.ALIYUN_HOST }}
         username: ${{ secrets.ALIYUN_USERNAME }}
         key: ${{ secrets.ALIYUN_SSH_KEY }}
         port: ${{ secrets.ALIYUN_PORT || '22' }}
-        source: "${{ github.event.inputs.database_file || 'database.sql' }}"
+        source: "movies-mysql/"
         target: "/tmp/"
 
-    - name: 🔄 导入数据库
+    - name: 🔄 执行部署
       uses: appleboy/ssh-action@v1.0.3
       with:
         host: ${{ secrets.ALIYUN_HOST }}
@@ -143,156 +155,155 @@ jobs:
         port: ${{ secrets.ALIYUN_PORT || '22' }}
         command_timeout: "600s"
         script: |
-          echo "📥 导入数据库..."
-          echo "🔍 调试信息开始 ========================"
-          echo "数据库文件: /tmp/${{ github.event.inputs.database_file || 'database.sql' }}"
-          echo "数据库名称: '${{ secrets.DB_NAME }}'"
-          echo "数据库用户: '${{ secrets.DB_USER }}'"
-          echo "数据库密码长度: ${#DB_PASSWORD} 字符"
-          echo "=========================================="
+          echo "🔄 执行数据库部署..."
           
-          DB_FILE="/tmp/${{ github.event.inputs.database_file || 'database.sql' }}"
-          DB_NAME="${{ secrets.DB_NAME }}"
+          DEPLOY_TYPE="${{ github.event.inputs.deploy_type || 'incremental' }}"
+          SOURCE_ENV="${{ github.event.inputs.source_env || 'development' }}"
+          TARGET_ENV="${{ github.event.inputs.target_env || 'production' }}"
           
-          # 检查文件是否存在
-          if [ ! -f "$DB_FILE" ]; then
-            echo "❌ 数据库文件不存在: $DB_FILE"
-            exit 1
-          fi
+          # 进入项目目录
+          cd /tmp/movies-mysql
           
-          echo "✅ 数据库文件存在，大小: $(ls -lh "$DB_FILE" | awk '{print $5}')"
+          # 安装依赖
+          echo "📦 安装项目依赖..."
+          npm install
           
-          # 创建配置文件来避免密码在命令行中显示
-          MYSQL_CNF="/tmp/mysql.cnf"
-          cat > "$MYSQL_CNF" << EOF
-          [client]
-          user=${{ secrets.DB_USER }}
-          password=${{ secrets.DB_PASSWORD }}
-          host=localhost
-          port=3306
-          EOF
+          # 设置环境变量
+          export DB_HOST="localhost"
+          export DB_USER="${{ secrets.DB_USER }}"
+          export DB_PASSWORD="${{ secrets.DB_PASSWORD }}"
+          export DB_NAME="${{ secrets.DB_NAME }}"
           
-          echo "🔍 配置文件内容（隐藏密码）:"
-          cat "$MYSQL_CNF" | sed 's/password=.*/password=***HIDDEN***/'
-          
-          # 设置配置文件权限
-          chmod 600 "$MYSQL_CNF"
-          echo "✅ 配置文件权限设置完成"
-          
-          # 测试数据库连接
-          echo "🔍 测试数据库连接..."
-          if sudo mysql --defaults-extra-file="$MYSQL_CNF" -e "SELECT 1;" > /dev/null 2>&1; then
-            echo "✅ 数据库连接成功"
-          else
-            echo "❌ 数据库连接失败"
-            echo "🔍 尝试显示错误信息:"
-            sudo mysql --defaults-extra-file="$MYSQL_CNF" -e "SELECT 1;" 2>&1
-            rm -f "$MYSQL_CNF"
-            exit 1
-          fi
-          
-          # 检查数据库是否存在
-          echo "🔍 检查数据库是否存在..."
-          DB_EXISTS=$(sudo mysql --defaults-extra-file="$MYSQL_CNF" -e "SHOW DATABASES LIKE '$DB_NAME';" 2>/dev/null | wc -l)
-          if [ "$DB_EXISTS" -gt 1 ]; then
-            echo "✅ 数据库 '$DB_NAME' 已存在"
-          else
-            echo "⚠️ 数据库 '$DB_NAME' 不存在，将创建"
-            sudo mysql --defaults-extra-file="$MYSQL_CNF" -e "CREATE DATABASE \`$DB_NAME\`;"
-          fi
-          
-          # 显示所有数据库
-          echo "🔍 当前所有数据库:"
-          sudo mysql --defaults-extra-file="$MYSQL_CNF" -e "SHOW DATABASES;"
-          
-          # 删除现有表（如果存在）
-          echo "🗑️ 删除现有表..."
-          
-          # 获取所有表名
-          TABLES=$(sudo mysql --defaults-extra-file="$MYSQL_CNF" -e "USE \`$DB_NAME\`; SHOW TABLES;" 2>/dev/null | tail -n +2)
-          
-          if [ -n "$TABLES" ]; then
-            echo "🔍 发现现有表: $TABLES"
+          # 根据部署类型执行不同的命令
+          if [ "$DEPLOY_TYPE" = "incremental" ]; then
+            echo "🔄 执行增量部署: $SOURCE_ENV -> $TARGET_ENV"
             
-            # 禁用外键检查
-            sudo mysql --defaults-extra-file="$MYSQL_CNF" -e "USE \`$DB_NAME\`; SET FOREIGN_KEY_CHECKS = 0;"
+            # 创建配置文件
+            cat > src/db-config.js << 'EOF'
+            const configs = {
+              development: {
+                host: process.env.DB_HOST || 'localhost',
+                user: process.env.DB_USER || 'root',
+                password: process.env.DB_PASSWORD || 'password',
+                database: process.env.DB_NAME || 'nest_db',
+                charset: 'utf8mb4',
+                port: process.env.DB_PORT || 3306
+              },
+              test: {
+                host: process.env.DB_HOST || 'localhost',
+                user: process.env.DB_USER || 'root',
+                password: process.env.DB_PASSWORD || 'password',
+                database: process.env.DB_NAME || 'nest_db_test',
+                charset: 'utf8mb4',
+                port: process.env.DB_PORT || 3306
+              },
+              staging: {
+                host: process.env.DB_HOST || 'localhost',
+                user: process.env.DB_USER || 'root',
+                password: process.env.DB_PASSWORD || 'password',
+                database: process.env.DB_NAME || 'nest_db_staging',
+                charset: 'utf8mb4',
+                port: process.env.DB_PORT || 3306
+              },
+              production: {
+                host: process.env.DB_HOST || 'localhost',
+                user: process.env.DB_USER || 'root',
+                password: process.env.DB_PASSWORD || 'password',
+                database: process.env.DB_NAME || 'nest_db_prod',
+                charset: 'utf8mb4',
+                port: process.env.DB_PORT || 3306
+              }
+            };
             
-            # 逐个删除表
-            for table in $TABLES; do
-              echo "🗑️ 删除表: $table"
-              sudo mysql --defaults-extra-file="$MYSQL_CNF" -e "USE \`$DB_NAME\`; DROP TABLE IF EXISTS \`$table\`;"
-            done
+            function getConfig(environment = 'development') {
+              const config = configs[environment];
+              if (!config) {
+                throw new Error(`未知的环境配置: ${environment}`);
+              }
+              return config;
+            }
             
-            # 重新启用外键检查
-            sudo mysql --defaults-extra-file="$MYSQL_CNF" -e "USE \`$DB_NAME\`; SET FOREIGN_KEY_CHECKS = 1;"
+            function getAvailableEnvironments() {
+              return Object.keys(configs);
+            }
             
-            echo "✅ 所有表已删除"
-          else
-            echo "ℹ️ 没有发现现有表"
-          fi
-          
-          # 方法1：先切换到数据库，再导入
-          echo "📥 方法1：先切换到数据库 '$DB_NAME'，再导入..."
-          
-          # 设置MySQL参数
-          sudo mysql --defaults-extra-file="$MYSQL_CNF" -e "USE \`$DB_NAME\`; SET FOREIGN_KEY_CHECKS = 0; SET SQL_MODE = 'NO_AUTO_VALUE_ON_ZERO,STRICT_TRANS_TABLES,ERROR_FOR_DIVISION_BY_ZERO,NO_ENGINE_SUBSTITUTION';"
-          
-          # 创建临时SQL文件，跳过CREATE DATABASE和USE语句
-          TEMP_SQL="/tmp/temp_import.sql"
-          grep -v "CREATE DATABASE\|USE \`" "$DB_FILE" > "$TEMP_SQL"
-          
-          # 导入数据
-          sudo mysql --defaults-extra-file="$MYSQL_CNF" "$DB_NAME" < "$TEMP_SQL"
-          
-          if [ $? -eq 0 ]; then
-            echo "✅ 数据库导入成功！"
-            rm -f "$TEMP_SQL"
-          else
-            echo "❌ 方法1失败，尝试方法2..."
-            rm -f "$TEMP_SQL"
+            function validateConfig(config) {
+              const required = ['host', 'user', 'password', 'database'];
+              for (const field of required) {
+                if (!config[field]) {
+                  throw new Error(`缺少必需的配置字段: ${field}`);
+                }
+              }
+              return true;
+            }
             
-            # 方法2：逐行执行SQL
-            echo "📥 方法2：逐行执行SQL，忽略错误..."
+            module.exports = {
+              getConfig,
+              getAvailableEnvironments,
+              validateConfig,
+              configs
+            };
+            EOF
             
-            # 逐行读取并执行SQL
-            while IFS= read -r line; do
-              # 跳过注释、空行、CREATE DATABASE和USE语句
-              if [[ "$line" =~ ^[[:space:]]*$ ]] || [[ "$line" =~ ^[[:space:]]*-- ]] || [[ "$line" =~ CREATE[[:space:]]+DATABASE ]] || [[ "$line" =~ USE[[:space:]]+[`\"] ]]; then
-                continue
-              fi
-              
-              # 执行SQL语句，忽略错误
-              echo "执行: $line"
-              sudo mysql --defaults-extra-file="$MYSQL_CNF" -e "USE \`$DB_NAME\`; $line" 2>/dev/null || echo "警告: 执行失败，继续..."
-            done < "$DB_FILE"
+            # 执行增量部署
+            node src/incremental-deploy.js "$SOURCE_ENV" "$TARGET_ENV" --execute
             
-            if [ $? -eq 0 ]; then
-              echo "✅ 数据库导入成功！"
+          elif [ "$DEPLOY_TYPE" = "full" ]; then
+            echo "🔄 执行完整部署: $SOURCE_ENV -> $TARGET_ENV"
+            
+            # 上传数据库文件（如果指定）
+            DB_FILE="${{ github.event.inputs.database_file || 'database.sql' }}"
+            if [ -f "/tmp/$DB_FILE" ]; then
+              echo "📤 使用指定的数据库文件: $DB_FILE"
+              cp "/tmp/$DB_FILE" .
             else
-              echo "❌ 所有方法都失败了"
-              echo "🔍 导入错误详情:"
-              exit 1
+              echo "📤 导出源数据库..."
+              node src/export.js export -o database.sql
             fi
+            
+            # 执行完整部署
+            chmod +x deploy.sh
+            ./deploy.sh full "$SOURCE_ENV" "$TARGET_ENV" -f
+            
+          else
+            echo "❌ 未知的部署类型: $DEPLOY_TYPE"
+            exit 1
           fi
           
-          # 重新启用外键检查
-          sudo mysql --defaults-extra-file="$MYSQL_CNF" -e "USE \`$DB_NAME\`; SET FOREIGN_KEY_CHECKS = 1;"
-          
-          # 验证导入结果
-          echo "🔍 验证数据库..."
-          TABLE_COUNT=$(sudo mysql --defaults-extra-file="$MYSQL_CNF" -e "USE \`$DB_NAME\`; SHOW TABLES;" | wc -l)
-          echo "📊 数据库表数量: $((TABLE_COUNT - 1))"
-          
-          echo "🔍 数据库中的表:"
-          sudo mysql --defaults-extra-file="$MYSQL_CNF" -e "USE \`$DB_NAME\`; SHOW TABLES;"
-          
-          # 清理临时文件
-          rm -f "$DB_FILE" "$MYSQL_CNF"
+          # 验证部署结果
+          echo "🔍 验证部署结果..."
+          node -e "
+            const mysql = require('mysql2/promise');
+            const config = {
+              host: process.env.DB_HOST || 'localhost',
+              user: process.env.DB_USER || 'root',
+              password: process.env.DB_PASSWORD || 'password',
+              database: process.env.DB_NAME || 'nest_db',
+              charset: 'utf8mb4'
+            };
+            
+            mysql.createConnection(config)
+              .then(connection => {
+                return connection.execute('SHOW TABLES')
+                  .then(([rows]) => {
+                    console.log('📊 数据库表数量:', rows.length);
+                    console.log('📋 表列表:');
+                    rows.forEach(row => {
+                      console.log('  -', Object.values(row)[0]);
+                    });
+                    return connection.end();
+                  });
+              })
+              .catch(error => {
+                console.error('❌ 验证失败:', error.message);
+                process.exit(1);
+              });
+          "
           
           echo "🎉 数据库部署完成！"
           echo "🌐 数据库地址: ${{ secrets.ALIYUN_HOST }}:3306"
-          echo "📊 数据库名称: $DB_NAME"
-          echo "🔍 调试信息结束 ========================"
+          echo "📊 数据库名称: ${{ secrets.DB_NAME }}"
+          echo "🔧 部署类型: $DEPLOY_TYPE"
 
     - name: 🔄 重启应用
       uses: appleboy/ssh-action@v1.0.3
@@ -315,4 +326,17 @@ jobs:
             docker-compose restart 2>/dev/null || docker compose restart 2>/dev/null || echo "Docker Compose 重启失败或无容器运行"
           fi
           
-          echo "✅ 应用重启检查完成" 
+          echo "✅ 应用重启检查完成"
+
+    - name: 🧹 清理临时文件
+      uses: appleboy/ssh-action@v1.0.3
+      with:
+        host: ${{ secrets.ALIYUN_HOST }}
+        username: ${{ secrets.ALIYUN_USERNAME }}
+        key: ${{ secrets.ALIYUN_SSH_KEY }}
+        port: ${{ secrets.ALIYUN_PORT || '22' }}
+        script: |
+          echo "🧹 清理临时文件..."
+          rm -rf /tmp/movies-mysql
+          rm -f /tmp/database.sql
+          echo "✅ 清理完成" 
