--- a/.github/workflows/deploy-database.yml
+++ b/.github/workflows/deploy-database.yml
@@ -4,9 +4,9 @@ on:
   push:
     branches: [ main, master ]
     paths:
-      - 'movies-mysql/database.sql'
-      - 'movies-mysql/src/**'
-      - 'movies-mysql/.github/workflows/deploy-database.yml'
+      - 'database.sql'
+      - 'src/**'
+      - '.github/workflows/deploy-database.yml'
   workflow_dispatch:
     inputs:
       deploy_type:
@@ -40,7 +40,7 @@ on:
       database_file:
         description: '数据库文件路径（仅用于完整部署）'
         required: false
-        default: 'movies-mysql/database.sql'
+        default: 'database.sql'
 
 jobs:
   deploy-database:
@@ -57,9 +57,7 @@ jobs:
         cache: 'npm'
 
     - name: 📦 安装依赖
-      run: |
-        cd movies-mysql
-        npm install
+      run: npm install
 
     - name: 🔍 检查部署类型
       run: |
@@ -72,7 +70,7 @@ jobs:
         echo "📥 目标环境: $TARGET_ENV"
         
         if [ "$DEPLOY_TYPE" = "full" ]; then
-          DB_FILE="${{ github.event.inputs.database_file || 'movies-mysql/database.sql' }}"
+          DB_FILE="${{ github.event.inputs.database_file || 'database.sql' }}"
           if [ ! -f "$DB_FILE" ]; then
             echo "❌ 数据库文件不存在: $DB_FILE"
             exit 1
@@ -143,7 +141,7 @@ jobs:
         username: ${{ secrets.ALIYUN_USERNAME }}
         key: ${{ secrets.ALIYUN_SSH_KEY }}
         port: ${{ secrets.ALIYUN_PORT || '22' }}
-        source: "movies-mysql/"
+        source: "./"
         target: "/tmp/"
 
     - name: 🔄 执行部署
@@ -162,7 +160,7 @@ jobs:
           TARGET_ENV="${{ github.event.inputs.target_env || 'production' }}"
           
           # 进入项目目录
-          cd /tmp/movies-mysql
+          cd /tmp
           
           # 安装依赖
           echo "📦 安装项目依赖..."
@@ -252,7 +250,7 @@ jobs:
             echo "🔄 执行完整部署: $SOURCE_ENV -> $TARGET_ENV"
             
             # 上传数据库文件（如果指定）
-            DB_FILE="${{ github.event.inputs.database_file || 'movies-mysql/database.sql' }}"
+            DB_FILE="${{ github.event.inputs.database_file || 'database.sql' }}"
             if [ -f "/tmp/$DB_FILE" ]; then
               echo "📤 使用指定的数据库文件: $DB_FILE"
               cp "/tmp/$DB_FILE" .
@@ -337,6 +335,5 @@ jobs:
         port: ${{ secrets.ALIYUN_PORT || '22' }}
         script: |
           echo "🧹 清理临时文件..."
-          rm -rf /tmp/movies-mysql
-          rm -f /tmp/database.sql
+          rm -rf /tmp/*
           echo "✅ 清理完成" 
