--- a/.github/workflows/deploy-database.yml
+++ b/.github/workflows/deploy-database.yml
@@ -120,8 +120,8 @@ jobs:
           
           # 创建数据库用户（如果不存在）
           echo "🔧 配置数据库用户..."
-          sudo mysql -e "CREATE USER IF NOT EXISTS '${{ secrets.DB_USER }}'@'localhost' IDENTIFIED BY '${{ secrets.DB_PASSWORD }}';" || true
-          sudo mysql -e "GRANT ALL PRIVILEGES ON *.* TO '${{ secrets.DB_USER }}'@'localhost' WITH GRANT OPTION;" || true
+          sudo mysql -e "CREATE USER IF NOT EXISTS ${{ secrets.DB_USER }}@localhost IDENTIFIED BY 'qq123456';" || true
+          sudo mysql -e "GRANT ALL PRIVILEGES ON *.* TO ${{ secrets.DB_USER }}@localhost WITH GRANT OPTION;" || true
           sudo mysql -e "FLUSH PRIVILEGES;" || true
           
           # 创建数据库（如果不存在）
