--- a/env.example
+++ b/env.example
@@ -2,7 +2,7 @@
 LOCAL_DB_HOST=localhost
 LOCAL_DB_PORT=3306
 LOCAL_DB_USER=root
-LOCAL_DB_PASSWORD=qq123456
+LOCAL_DB_PASSWORD=Zhengwenguo0503.
 LOCAL_DB_NAME=nest_db
 
 # 导出配置
